# comp220-code-examples

./: .gitignore  CMakeLists.txt  COMP220-Code-Examples.sln  COMP220-Code-Examples.vcxproj  COMP220-Code-Examples.vcxproj.filters  README.md  config.ini  main.cpp
BaseGame/: BaseGame.cpp  BaseGame.h  Config.cpp  Config.h  ConfigFile.cpp  ConfigFile.h  INIReader.h  ProgramOptions.cpp  ProgramOptions.h
COMP220-Code-Examples/: BasicFrag.glsl  BasicVert.glsl  CMakeLists.txt  COMP220-Code-Examples.vcxproj  COMP220-Code-Examples.vcxproj.filters  GameObject.cpp  GameObject.h  Light.h  LightingFrag.glsl  LightingVert.glsl  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NormalMappingFrag.glsl  OpenGLBulletDebugDrawer.cpp  OpenGLBulletDebugDrawer.h  OpenGLBulletPhysicsDebugDraw.cpp  OpenGLBulletPhysicsDebugDraw.h  ParallaxMappingFrag.glsl  ParallaxMappingVert.glsl  Shader.cpp  Shader.h  Shaders.cpp  Shaders.h  Tank1.FBX  Tank6.FBX  Texture.cpp  Texture.h  TextureFrag.glsl  TextureVert.glsl  Timer.cpp  Timer.h  Vertex.h  armoredrecon.fbx  blinnPhongFrag.glsl  blinnPhongVert.glsl  cube.nff  frag.glsl  imgui.ini  (+16 more)
COMP220-Lab1/: COMP220-Lab1.vcxproj  COMP220-Lab1.vcxproj.filters  Lab1Game.h  imgui.ini  main.cpp
COMP220DemoFramework/: COMP220DemoFramework.vcxproj  COMP220DemoFramework.vcxproj.filters
COMP220DemoFramework/BaseGame/: BaseGame.cpp  BaseGame.h  Config.cpp  Timer.cpp
COMP220DemoFramework/Renderer/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderProgram.h  (+10 more)
Renderer/: OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.h
cmake/: CMakeLists.txt
(+82 files in other folders)
